--- a/examples/prompty/basic/prompty-quickstart.ipynb
+++ b/examples/prompty/basic/prompty-quickstart.ipynb
@@ -91,9 +91,7 @@
     "f = Prompty.load(source=\"basic.prompty\")\n",
     "\n",
     "# execute the flow as function\n",
-    "result = f(\n",
-    "    first_name=\"John\", last_name=\"Doe\", question=\"What is the capital of France?\"\n",
-    ")\n",
+    "result = f(question=\"What is the capital of France?\")\n",
     "result"
    ]
   },
@@ -132,9 +130,7 @@
     "f = Prompty.load(source=\"basic.prompty\", model=override_model)\n",
     "\n",
     "# execute the flow as function\n",
-    "result = f(\n",
-    "    first_name=\"John\", last_name=\"Doe\", question=\"What is the capital of France?\"\n",
-    ")\n",
+    "result = f(question=\"What is the capital of France?\")\n",
     "result"
    ]
   },
@@ -173,7 +169,7 @@
     "# rerun the function, which will be recorded in the trace\n",
     "question = \"What is the capital of Japan?\"\n",
     "ground_truth = \"Tokyo\"\n",
-    "result = f(first_name=\"John\", last_name=\"Doe\", question=question)\n",
+    "result = f(question=question)\n",
     "result"
    ]
   },
@@ -194,7 +190,7 @@
     "eval_flow = Prompty.load(\"../eval-basic/eval.prompty\")\n",
     "# execute the flow as function\n",
     "result = eval_flow(\n",
-    "    question=question, ground_truth=ground_truth, answer=result[\"answer\"]\n",
+    "    question=question, ground_truth=ground_truth, answer=result\n",
     ")\n",
     "result"
    ]
@@ -242,8 +238,6 @@
     "    flow=flow,\n",
     "    data=data,\n",
     "    column_mapping={\n",
-    "        \"first_name\": \"${data.first_name}\",\n",
-    "        \"last_name\": \"${data.last_name}\",\n",
     "        \"question\": \"${data.question}\",\n",
     "    },\n",
     "    stream=True,\n",
@@ -290,7 +284,7 @@
     "    run=base_run,  # specify base_run as the run you want to evaluate\n",
     "    column_mapping={\n",
     "        \"question\": \"${data.question}\",\n",
-    "        \"answer\": \"${run.outputs.answer}\",\n",
+    "        \"answer\": \"${run.outputs.output}\", # TODO refine this mapping\n",
     "        \"ground_truth\": \"${data.ground_truth}\",\n",
     "    },\n",
     "    stream=True,\n",
@@ -313,8 +307,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: fix the visualization\n",
-    "# pf.visualize([base_run, eval_run])"
+    "# visualize run using ui\n",
+    "pf.visualize([base_run, eval_run])"
    ]
   },
   {
