--- a/examples/prompty/basic/prompty-quickstart.ipynb
+++ b/examples/prompty/basic/prompty-quickstart.ipynb
@@ -60,9 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: before running below cell, please configure required environment variable `AZURE_OPENAI_API_KEY`, `AZURE_OPENAI_ENDPOINT` by create an `.env` file. Please refer to `../.env.example` as an template.\n",
-    "\n",
-    "Note: you need the new [gpt-35-turbo (0125) version](https://learn.microsoft.com/en-us/azure/ai-services/openai/concepts/models#gpt-35-models) to use the json_object response_format feature."
+    "Note: before running below cell, please configure required environment variable `AZURE_OPENAI_API_KEY`, `AZURE_OPENAI_ENDPOINT` by create an `.env` file. Please refer to `../.env.example` as an template.\n"
    ]
   },
   {
@@ -177,7 +175,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Eval the result "
+    "### Eval the result \n",
+    "\n",
+    "Note: the eval flow returns a `json_object`. You need a new model version like [gpt-35-turbo (0125)](https://learn.microsoft.com/en-us/azure/ai-services/openai/concepts/models#gpt-35-models) to use the `json_object` response_format feature."
    ]
   },
   {
