--- a/examples/flex-flows/eval-criteria-with-langchain/langchain-eval.ipynb
+++ b/examples/flex-flows/eval-criteria-with-langchain/langchain-eval.ipynb
@@ -13,8 +13,8 @@
    "source": [
     "**Learning Objectives** - Upon completing this tutorial, you should be able to:\n",
     "\n",
-    "- Convert LangChain criteria evaluator applications to flex flow.\n",
-    "- Use CustomConnection to store secrets.\n",
+    "- Convert LangChain criteria evaluator applications to `flex flow`.\n",
+    "- Use `CustomConnection` to store secrets.\n",
     "\n",
     "## 0. Install dependent packages"
    ]
@@ -33,7 +33,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize a pf client"
+    "## 1. Trace your langchain evaluator with prompt flow\n",
+    "### Initialize a pf client"
    ]
   },
   {
@@ -51,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a custom connection to protect your API key\n",
+    "### Create a custom connection to protect your API key\n",
     "\n",
     "You can protect your API key in custom connection's secrets."
    ]
@@ -66,31 +67,40 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "from promptflow.entities import CustomConnection\n",
+    "conn_name = \"my_llm_connection\"\n",
     "\n",
-    "if \"AZURE_OPENAI_API_KEY\" not in os.environ:\n",
-    "    # load environment variables from .env file\n",
-    "    load_dotenv()\n",
+    "try:\n",
+    "    conn = pf.connections.get(name=conn_name)\n",
+    "    print(\"using existing connection\")\n",
+    "except:\n",
     "\n",
-    "# put API key in secrets\n",
-    "connection = CustomConnection(\n",
-    "    name=\"my_llm_connection\",\n",
-    "    secrets={\n",
-    "        # store API key\n",
-    "        # \"anthropic_api_key\": \"<your-api-key>\",\n",
-    "        \"openai_api_key\": os.environ[\"AZURE_OPENAI_API_KEY\"],\n",
-    "        \"azure_endpoint\": os.environ[\"AZURE_OPENAI_ENDPOINT\"],\n",
-    "    },\n",
-    ")\n",
-    "# Create the connection, note that all secret values will be scrubbed in the returned result\n",
-    "result = pf.connections.create_or_update(connection)\n",
-    "print(result)"
+    "    if \"AZURE_OPENAI_API_KEY\" not in os.environ:\n",
+    "        # load environment variables from .env file\n",
+    "        load_dotenv()\n",
+    "\n",
+    "    # put API key in secrets\n",
+    "    connection = CustomConnection(\n",
+    "        name=conn_name,\n",
+    "        configs={\n",
+    "            \"azure_endpoint\": os.environ[\"AZURE_OPENAI_ENDPOINT\"],\n",
+    "        },\n",
+    "        secrets={\n",
+    "            # store API key\n",
+    "            # \"anthropic_api_key\": \"<your-api-key>\",\n",
+    "            \"openai_api_key\": os.environ[\"AZURE_OPENAI_API_KEY\"],\n",
+    "        },\n",
+    "    )\n",
+    "    # Create the connection, note that all secret values will be scrubbed in the returned result\n",
+    "    conn = pf.connections.create_or_update(connection)\n",
+    "    print(\"successfully created connection\")\n",
+    "print(conn)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test the evaluator with trace"
+    "### Test the evaluator with trace"
    ]
   },
   {
@@ -102,7 +112,7 @@
     "from eval_conciseness import LangChainEvaluator\n",
     "\n",
     "\n",
-    "evaluator = LangChainEvaluator(custom_connection=connection)\n",
+    "evaluator = LangChainEvaluator(custom_connection=conn)\n",
     "result = evaluator(\n",
     "    prediction=\"What's 2+2? That's an elementary question. The answer you're looking for is that two and two is four.\",\n",
     "    input=\"What's 2+2?\",\n",
@@ -114,8 +124,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Batch run the function as flow with multi-line data\n",
-    "\n",
+    "## 2. Batch run the evaluator obj as flow with multi-line data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = \"./data.jsonl\"  # path to the data file\n",
+    "# create run with the flow function and data\n",
+    "base_run = pf.run(\n",
+    "    flow=evaluator,\n",
+    "    # reference custom connection by name\n",
+    "    init={\n",
+    "        \"custom_connection\": \"my_llm_connection\",\n",
+    "    },\n",
+    "    data=data,\n",
+    "    column_mapping={\n",
+    "        \"prediction\": \"${data.prediction}\",\n",
+    "        \"input\": \"${data.input}\",\n",
+    "    },\n",
+    "    stream=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "details = pf.get_details(base_run)\n",
+    "details.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pf.visualize([base_run])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Batch run the evaluator with flow yaml\n",
     "Create a [flow.flex.yaml](https://github.com/microsoft/promptflow/blob/main/examples/flex-flows/eval-criteria-with-langchain/flow.flex.yaml) file to define a flow which entry pointing to the python function we defined.\n"
    ]
   },
