--- a/examples/flex-flows/chat-stream/chat-stream-with-flex-flow.ipynb
+++ b/examples/flex-flows/chat-stream/chat-stream-with-flex-flow.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stream Chat with flex flow"
+    "# Stream chat with flex flow"
    ]
   },
   {
