refine chat flex-flow examples with prompty.estimate_token_count

--- a/examples/flex-flows/chat-stream/chat-stream-with-flex-flow.ipynb
+++ b/examples/flex-flows/chat-stream/chat-stream-with-flex-flow.ipynb
@@ -149,7 +149,7 @@
     "start_trace()\n",
     "\n",
     "# run the flow as function, which will be recorded in the trace\n",
-    "result = chat_flow(question=\"What is ChatGPT? Please explain with consise statement\")\n",
+    "result = chat_flow(question=\"What is ChatGPT? Please explain with detailed statement\")\n",
     "# note the type is generator object as we enabled stream in prompty\n",
     "result"
    ]
@@ -160,9 +160,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
     "# print result in stream manner\n",
     "for r in result:\n",
-    "    print(result, end=\"\")"
+    "    print(r, end=\"\")\n",
+    "    # For better animation effects\n",
+    "    time.sleep(0.01)"
    ]
   },
   {
@@ -365,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.17"
   },
   "resources": "examples/requirements.txt, examples/flex-flows/chat-basic, examples/flex-flows/eval-checklist"
  },
