--- a/examples/prompty/basic/prompty-quickstart.ipynb
+++ b/examples/prompty/basic/prompty-quickstart.ipynb
@@ -189,9 +189,7 @@
     "# load prompty as a flow\n",
     "eval_flow = Prompty.load(\"../eval-basic/eval.prompty\")\n",
     "# execute the flow as function\n",
-    "result = eval_flow(\n",
-    "    question=question, ground_truth=ground_truth, answer=result\n",
-    ")\n",
+    "result = eval_flow(question=question, ground_truth=ground_truth, answer=result)\n",
     "result"
    ]
   },
@@ -284,7 +282,7 @@
     "    run=base_run,  # specify base_run as the run you want to evaluate\n",
     "    column_mapping={\n",
     "        \"question\": \"${data.question}\",\n",
-    "        \"answer\": \"${run.outputs.output}\", # TODO refine this mapping\n",
+    "        \"answer\": \"${run.outputs.output}\",  # TODO refine this mapping\n",
     "        \"ground_truth\": \"${data.ground_truth}\",\n",
     "    },\n",
     "    stream=True,\n",
