[Doc] Adjust Sequence of tutorial doc. (#3245)
# Description

Adjust Sequence of doc site.

# All Promptflow Contribution checklist:
- [ ] **The pull request does not introduce [breaking changes].**
- [ ] **CHANGELOG is updated for new features, bug fixes or other
significant changes.**
- [ ] **I have read the [contribution guidelines](../CONTRIBUTING.md).**
- [ ] **Create an issue and link to the pull request to get dedicated
review from promptflow team. Learn more: [suggested
workflow](../CONTRIBUTING.md#suggested-workflow).**

## General Guidelines and Best Practices
- [ ] Title of the pull request is clear and informative.
- [ ] There are a small number of commits, each of which have an
informative message. This means that previously merged commits do not
appear in the history of the PR. For more information on cleaning up the
commits in your PR, [see this
page](https://github.com/Azure/azure-powershell/blob/master/documentation/development-docs/cleaning-up-commits.md).

### Testing Guidelines
- [ ] Pull request includes test coverage for the included changes.

--- a/examples/flows/chat/chat-with-pdf/chat-with-pdf-azure.ipynb
+++ b/examples/flows/chat/chat-with-pdf/chat-with-pdf-azure.ipynb
@@ -301,8 +301,8 @@
     "ttthree@github.com"
    ],
    "category": "azure",
-   "section": "Flow",
-   "weight": 30
+   "section": "Rag",
+   "weight": 10
   },
   "description": "A tutorial of chat-with-pdf flow that executes in Azure AI",
   "kernelspec": {
