--- a/examples/flows/chat/chat-with-pdf/chat-with-pdf.ipynb
+++ b/examples/flows/chat/chat-with-pdf/chat-with-pdf.ipynb
@@ -314,8 +314,8 @@
     "ttthree@github.com"
    ],
    "category": "local",
-   "section": "Flow",
-   "weight": 100
+   "section": "Rag",
+   "weight": 10
   },
   "description": "A tutorial of chat-with-pdf flow that allows user ask questions about the content of a PDF file and get answers",
   "kernelspec": {
