--- a/examples/prompty/format-output/prompty-output-format.ipynb
+++ b/examples/prompty/format-output/prompty-output-format.ipynb
@@ -110,10 +110,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from promptflow.core import Flow\n",
+    "from promptflow.core import Prompty\n",
     "\n",
     "# load prompty as a flow\n",
-    "f = Flow.load(\"text_format.prompty\")\n",
+    "f = Prompty.load(\"text_format.prompty\")\n",
     "# execute the flow as function\n",
     "question = \"What is the capital of France?\"\n",
     "result = f(first_name=\"John\", last_name=\"Doe\", question=question)\n",
@@ -151,10 +151,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from promptflow.core import Flow\n",
+    "from promptflow.core import Prompty\n",
     "\n",
     "# load prompty as a flow\n",
-    "f = Flow.load(\"json_format.prompty\")\n",
+    "f = Prompty.load(\"json_format.prompty\")\n",
     "# execute the flow as function\n",
     "question = \"What is the capital of France?\"\n",
     "result = f(first_name=\"John\", last_name=\"Doe\", question=question)\n",
@@ -188,16 +188,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from promptflow.core import Flow\n",
+    "from promptflow.core import Prompty\n",
     "\n",
     "# load prompty as a flow\n",
-    "f = Flow.load(\"all_response.prompty\")\n",
+    "f = Prompty.load(\"all_response.prompty\")\n",
     "# execute the flow as function\n",
     "question = \"What is the capital of France?\"\n",
     "result = f(first_name=\"John\", last_name=\"Doe\", question=question)\n",
     "\n",
     "# note: the result is a ChatCompletion object\n",
-    "result"
+    "print(result.choices[0])"
    ]
   },
   {
@@ -230,10 +230,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from promptflow.core import Flow\n",
+    "from promptflow.core import Prompty\n",
     "\n",
     "# load prompty as a flow\n",
-    "f = Flow.load(\"stream_output.prompty\")\n",
+    "f = Prompty.load(\"stream_output.prompty\")\n",
     "# execute the flow as function\n",
     "question = \"What's the steps to get rich?\"\n",
     "result = f(question=question)\n",
@@ -352,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
