--- a/examples/flex-flows/chat-basic/chat-with-class-based-flow-azure.ipynb
+++ b/examples/flex-flows/chat-basic/chat-with-class-based-flow-azure.ipynb
@@ -207,7 +207,7 @@
     "    data=\"./data.jsonl\",  # path to the data file\n",
     "    run=base_run,  # specify base_run as the run you want to evaluate\n",
     "    column_mapping={\n",
-    "        \"answer\": \"${run.outputs.answer}\",\n",
+    "        \"answer\": \"${run.outputs.output}\",\n",
     "        \"statements\": \"${data.statements}\",\n",
     "    },\n",
     "    stream=True,\n",
