--- a/examples/flex-flows/chat-basic/chat-with-class-based-flow.ipynb
+++ b/examples/flex-flows/chat-basic/chat-with-class-based-flow.ipynb
@@ -163,7 +163,7 @@
     "eval_flow = EvalFlow(config)\n",
     "# evaluate answer agains a set of statement\n",
     "eval_result = eval_flow(\n",
-    "    answer=result.answer,\n",
+    "    answer=result,\n",
     "    statements={\n",
     "        \"correctness\": \"It contains a detailed explanation of ChatGPT.\",\n",
     "        \"consise\": \"It is a consise statement.\",\n",
@@ -253,7 +253,7 @@
     "    data=\"./data.jsonl\",  # path to the data file\n",
     "    run=base_run,  # specify base_run as the run you want to evaluate\n",
     "    column_mapping={\n",
-    "        \"answer\": \"${run.outputs.answer}\",\n",
+    "        \"answer\": \"${run.outputs.output}\",\n",
     "        \"statements\": \"${data.statements}\",\n",
     "    },\n",
     "    stream=True,\n",
@@ -330,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.9.18"
   },
   "resources": "examples/requirements.txt, examples/flex-flows/chat-basic, examples/flex-flows/eval-checklist"
  },
