--- a/examples/flex-flows/chat-async-stream/chat-stream-with-flex-flow.ipynb
+++ b/examples/flex-flows/chat-async-stream/chat-stream-with-flex-flow.ipynb
@@ -165,7 +165,7 @@
     "# print result in stream manner\n",
     "async for output in result:\n",
     "    print(output, end=\"\")\n",
-    "    await asyncio.sleep(0.01)\n"
+    "    await asyncio.sleep(0.01)"
    ]
   },
   {
