--- a/examples/tutorials/run-management/cloud-run-management.ipynb
+++ b/examples/tutorials/run-management/cloud-run-management.ipynb
@@ -211,9 +211,7 @@
     "    # }\n",
     ")\n",
     "\n",
-    "base_run = pf.runs.create_or_update(\n",
-    "    run=run\n",
-    ")"
+    "base_run = pf.runs.create_or_update(run=run)"
    ]
   },
   {
