--- a/examples/flex-flows/chat-async-stream/chat-stream-with-async-flex-flow.ipynb
+++ b/examples/flex-flows/chat-async-stream/chat-stream-with-async-flex-flow.ipynb
@@ -141,7 +141,7 @@
     "\n",
     "# create a chatFlow obj with connection\n",
     "config = AzureOpenAIModelConfiguration(\n",
-    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-35-turbo-0125\"\n",
+    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-35-turbo\"\n",
     ")\n",
     "chat_flow = ChatFlow(config)\n",
     "\n",
@@ -371,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   },
   "resources": "examples/requirements.txt, examples/flex-flows/chat-basic, examples/flex-flows/eval-checklist"
  },
