--- a/examples/flex-flows/chat-basic/chat-with-class-based-flow.ipynb
+++ b/examples/flex-flows/chat-basic/chat-with-class-based-flow.ipynb
@@ -109,7 +109,7 @@
     "\n",
     "# create the model config to be used in below flow calls\n",
     "config = AzureOpenAIModelConfiguration(\n",
-    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-35-turbo-0125\"\n",
+    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-35-turbo\"\n",
     ")"
    ]
   },
