--- a/examples/flex-flows/chat-stream/chat-stream-with-flex-flow.ipynb
+++ b/examples/flex-flows/chat-stream/chat-stream-with-flex-flow.ipynb
@@ -141,7 +141,7 @@
     "\n",
     "# create a chatFlow obj with connection\n",
     "config = AzureOpenAIModelConfiguration(\n",
-    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-35-turbo-0125\"\n",
+    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-35-turbo\"\n",
     ")\n",
     "chat_flow = ChatFlow(config)\n",
     "\n",
