--- a/examples/flex-flows/basic/flex-flow-quickstart.ipynb
+++ b/examples/flex-flows/basic/flex-flow-quickstart.ipynb
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "# control the AOAI deployment (model) used in this example\n",
-    "deployment_name = \"gpt-35-turbo-0125\""
+    "deployment_name = \"gpt-35-turbo\""
    ]
   },
   {
@@ -376,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.9.18"
   },
   "resources": "examples/requirements.txt, examples/flex-flows/basic"
  },
