--- a/examples/flex-flows/chat-basic/chat-with-class-based-flow-azure.ipynb
+++ b/examples/flex-flows/chat-basic/chat-with-class-based-flow-azure.ipynb
@@ -199,7 +199,7 @@
    "source": [
     "eval_flow = \"../eval-checklist/flow.flex.yaml\"\n",
     "config = AzureOpenAIModelConfiguration(\n",
-    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-35-turbo-0125\"\n",
+    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-35-turbo\"\n",
     ")\n",
     "eval_run = pf.run(\n",
     "    flow=eval_flow,\n",
