[Sample] sample update target v1.11 (#3162)
# Description

Sample update target v1.11
- refine prompty/flex flow with improved user experience
- Add sample using prompty with parameters.tools

# All Promptflow Contribution checklist:
- [ ] **The pull request does not introduce [breaking changes].**
- [ ] **CHANGELOG is updated for new features, bug fixes or other
significant changes.**
- [ ] **I have read the [contribution guidelines](../CONTRIBUTING.md).**
- [ ] **Create an issue and link to the pull request to get dedicated
review from promptflow team. Learn more: [suggested
workflow](../CONTRIBUTING.md#suggested-workflow).**

## General Guidelines and Best Practices
- [ ] Title of the pull request is clear and informative.
- [ ] There are a small number of commits, each of which have an
informative message. This means that previously merged commits do not
appear in the history of the PR. For more information on cleaning up the
commits in your PR, [see this
page](https://github.com/Azure/azure-powershell/blob/master/documentation/development-docs/cleaning-up-commits.md).

### Testing Guidelines
- [ ] Pull request includes test coverage for the included changes.

---------

Co-authored-by: Han Wang <phoenix.seek@gmail.com>
Co-authored-by: Clement Wang <clwan@microsoft.com>
Co-authored-by: Zhengfei Wang <wangzhengfei.chn@outlook.com>
Co-authored-by: Han Wang <wanhan@microsoft.com>
Co-authored-by: Zhen Ruan <zhrua@microsoft.com>
Co-authored-by: Philip Gao <yigao@microsoft.com>

--- a/examples/flex-flows/basic/flex-flow-quickstart-azure.ipynb
+++ b/examples/flex-flows/basic/flex-flow-quickstart-azure.ipynb
@@ -92,13 +92,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -155,6 +148,10 @@
     "    data=data,\n",
     "    column_mapping={\n",
     "        \"text\": \"${data.text}\",\n",
+    "    },\n",
+    "    environment_variables={\n",
+    "        \"AZURE_OPENAI_API_KEY\": \"${open_ai_connection.api_key}\",\n",
+    "        \"AZURE_OPENAI_ENDPOINT\": \"${open_ai_connection.api_base}\",\n",
     "    },\n",
     "    stream=True,\n",
     ")"
@@ -300,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.18"
   },
   "resources": "examples/requirements-azure.txt, examples/flex-flows/basic, examples/flex-flows/eval-code-quality"
  },
