--- a/examples/flex-flows/chat-basic/chat-with-class-based-flow.ipynb
+++ b/examples/flex-flows/chat-basic/chat-with-class-based-flow.ipynb
@@ -109,7 +109,7 @@
     "\n",
     "# create the model config to be used in below flow calls\n",
     "config = AzureOpenAIModelConfiguration(\n",
-    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-35-turbo-0125\"\n",
+    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-35-turbo\"\n",
     ")"
    ]
   },
@@ -163,7 +163,7 @@
     "eval_flow = EvalFlow(config)\n",
     "# evaluate answer agains a set of statement\n",
     "eval_result = eval_flow(\n",
-    "    answer=result.answer,\n",
+    "    answer=result,\n",
     "    statements={\n",
     "        \"correctness\": \"It contains a detailed explanation of ChatGPT.\",\n",
     "        \"consise\": \"It is a consise statement.\",\n",
@@ -253,7 +253,7 @@
     "    data=\"./data.jsonl\",  # path to the data file\n",
     "    run=base_run,  # specify base_run as the run you want to evaluate\n",
     "    column_mapping={\n",
-    "        \"answer\": \"${run.outputs.answer}\",\n",
+    "        \"answer\": \"${run.outputs.output}\",\n",
     "        \"statements\": \"${data.statements}\",\n",
     "    },\n",
     "    stream=True,\n",
