--- a/examples/flex-flows/chat-stream/chat-stream-with-flex-flow.ipynb
+++ b/examples/flex-flows/chat-stream/chat-stream-with-flex-flow.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stream Chat with flex flow"
+    "# Stream chat with flex flow"
    ]
   },
   {
@@ -141,7 +141,7 @@
     "\n",
     "# create a chatFlow obj with connection\n",
     "config = AzureOpenAIModelConfiguration(\n",
-    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-35-turbo-0125\"\n",
+    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-35-turbo\"\n",
     ")\n",
     "chat_flow = ChatFlow(config)\n",
     "\n",
@@ -149,7 +149,7 @@
     "start_trace()\n",
     "\n",
     "# run the flow as function, which will be recorded in the trace\n",
-    "result = chat_flow(question=\"What is ChatGPT? Please explain with consise statement\")\n",
+    "result = chat_flow(question=\"What is ChatGPT? Please explain with detailed statement\")\n",
     "# note the type is generator object as we enabled stream in prompty\n",
     "result"
    ]
@@ -160,9 +160,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
+    "\n",
     "# print result in stream manner\n",
     "for r in result:\n",
-    "    print(result, end=\"\")"
+    "    print(r, end=\"\")\n",
+    "    # For better animation effects\n",
+    "    time.sleep(0.01)"
    ]
   },
   {
