--- a/examples/prompty/chat-basic/chat-with-prompty.ipynb
+++ b/examples/prompty/chat-basic/chat-with-prompty.ipynb
@@ -66,9 +66,7 @@
     "\n",
     "Above prompty uses connection `open_ai_connection` inside, we need to set up the connection if we haven't added it before. After created, it's stored in local db and can be used in any flow.\n",
     "\n",
-    "Prepare your Azure Open AI resource follow this [instruction](https://learn.microsoft.com/en-us/azure/cognitive-services/openai/how-to/create-resource?pivots=web-portal) and get your `api_key` if you don't have one.\n",
-    "\n",
-    "Note: you need the new [gpt-35-turbo (0125) version](https://learn.microsoft.com/en-us/azure/ai-services/openai/concepts/models#gpt-35-models) to use the json_object response_format feature."
+    "Prepare your Azure Open AI resource follow this [instruction](https://learn.microsoft.com/en-us/azure/cognitive-services/openai/how-to/create-resource?pivots=web-portal) and get your `api_key` if you don't have one."
    ]
   },
   {
@@ -126,7 +124,7 @@
     "f = Prompty.load(\"chat.prompty\")\n",
     "# execute the flow as function\n",
     "question = \"What is the capital of France?\"\n",
-    "result = f(first_name=\"John\", last_name=\"Doe\", question=question)\n",
+    "result = f(question=question)\n",
     "result"
    ]
   },
@@ -165,7 +163,7 @@
     "f = Prompty.load(\"chat.prompty\", model=override_model)\n",
     "# execute the flow as function\n",
     "question = \"What is the capital of France?\"\n",
-    "result = f(first_name=\"John\", last_name=\"Doe\", question=question)\n",
+    "result = f(question=question)\n",
     "result"
    ]
   },
@@ -202,7 +200,7 @@
    "outputs": [],
    "source": [
     "# rerun the function, which will be recorded in the trace\n",
-    "result = f(first_name=\"John\", last_name=\"Doe\", question=question)\n",
+    "result = f(question=question)\n",
     "result"
    ]
   },
@@ -228,6 +226,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note: the eval flow returns a `json_object`. You need a new model version like [gpt-35-turbo (0125)](https://learn.microsoft.com/en-us/azure/ai-services/openai/concepts/models#gpt-35-models) to use the `json_object` response_format feature."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -236,7 +241,7 @@
     "# load prompty as a flow\n",
     "eval_flow = Prompty.load(eval_prompty)\n",
     "# execute the flow as function\n",
-    "result = eval_flow(question=question, answer=result[\"answer\"], messages=[])\n",
+    "result = eval_flow(question=question, answer=result, messages=[])\n",
     "result"
    ]
   },
@@ -264,8 +269,6 @@
     "    flow=flow,\n",
     "    data=data,\n",
     "    column_mapping={\n",
-    "        \"first_name\": \"${data.first_name}\",\n",
-    "        \"last_name\": \"${data.last_name}\",\n",
     "        \"question\": \"${data.question}\",\n",
     "        \"chat_history\": \"${data.chat_history}\",\n",
     "    },\n",
@@ -312,7 +315,7 @@
     "    column_mapping={\n",
     "        \"messages\": \"${data.chat_history}\",\n",
     "        \"question\": \"${data.question}\",\n",
-    "        \"answer\": \"${run.outputs.answer}\",\n",
+    "        \"answer\": \"${run.outputs.output}\",  # TODO refine this mapping\n",
     "    },\n",
     "    stream=True,\n",
     ")"
