--- a/examples/flex-flows/chat-basic/chat-with-class-based-flow-azure.ipynb
+++ b/examples/flex-flows/chat-basic/chat-with-class-based-flow-azure.ipynb
@@ -130,7 +130,7 @@
     "\n",
     "# create the model config to be used in below flow calls\n",
     "config = AzureOpenAIModelConfiguration(\n",
-    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-35-turbo-0125\"\n",
+    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-35-turbo\"\n",
     ")"
    ]
   },
@@ -198,7 +198,9 @@
    "outputs": [],
    "source": [
     "eval_flow = \"../eval-checklist/flow.flex.yaml\"\n",
-    "\n",
+    "config = AzureOpenAIModelConfiguration(\n",
+    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-35-turbo\"\n",
+    ")\n",
     "eval_run = pf.run(\n",
     "    flow=eval_flow,\n",
     "    init={\n",
@@ -207,7 +209,7 @@
     "    data=\"./data.jsonl\",  # path to the data file\n",
     "    run=base_run,  # specify base_run as the run you want to evaluate\n",
     "    column_mapping={\n",
-    "        \"answer\": \"${run.outputs.answer}\",\n",
+    "        \"answer\": \"${run.outputs.output}\",\n",
     "        \"statements\": \"${data.statements}\",\n",
     "    },\n",
     "    stream=True,\n",
