--- a/examples/prompty/basic/prompty-quickstart.ipynb
+++ b/examples/prompty/basic/prompty-quickstart.ipynb
@@ -60,9 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: before running below cell, please configure required environment variable `AZURE_OPENAI_API_KEY`, `AZURE_OPENAI_ENDPOINT` by create an `.env` file. Please refer to `../.env.example` as an template.\n",
-    "\n",
-    "Note: you need the new [gpt-35-turbo (0125) version](https://learn.microsoft.com/en-us/azure/ai-services/openai/concepts/models#gpt-35-models) to use the json_object response_format feature."
+    "Note: before running below cell, please configure required environment variable `AZURE_OPENAI_API_KEY`, `AZURE_OPENAI_ENDPOINT` by create an `.env` file. Please refer to `../.env.example` as an template.\n"
    ]
   },
   {
@@ -91,9 +89,7 @@
     "f = Prompty.load(source=\"basic.prompty\")\n",
     "\n",
     "# execute the flow as function\n",
-    "result = f(\n",
-    "    first_name=\"John\", last_name=\"Doe\", question=\"What is the capital of France?\"\n",
-    ")\n",
+    "result = f(question=\"What is the capital of France?\")\n",
     "result"
    ]
   },
@@ -132,9 +128,7 @@
     "f = Prompty.load(source=\"basic.prompty\", model=override_model)\n",
     "\n",
     "# execute the flow as function\n",
-    "result = f(\n",
-    "    first_name=\"John\", last_name=\"Doe\", question=\"What is the capital of France?\"\n",
-    ")\n",
+    "result = f(question=\"What is the capital of France?\")\n",
     "result"
    ]
   },
@@ -173,7 +167,7 @@
     "# rerun the function, which will be recorded in the trace\n",
     "question = \"What is the capital of Japan?\"\n",
     "ground_truth = \"Tokyo\"\n",
-    "result = f(first_name=\"John\", last_name=\"Doe\", question=question)\n",
+    "result = f(question=question)\n",
     "result"
    ]
   },
@@ -181,7 +175,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Eval the result "
+    "### Eval the result \n",
+    "\n",
+    "Note: the eval flow returns a `json_object`. You need a new model version like [gpt-35-turbo (0125)](https://learn.microsoft.com/en-us/azure/ai-services/openai/concepts/models#gpt-35-models) to use the `json_object` response_format feature."
    ]
   },
   {
@@ -193,9 +189,7 @@
     "# load prompty as a flow\n",
     "eval_flow = Prompty.load(\"../eval-basic/eval.prompty\")\n",
     "# execute the flow as function\n",
-    "result = eval_flow(\n",
-    "    question=question, ground_truth=ground_truth, answer=result[\"answer\"]\n",
-    ")\n",
+    "result = eval_flow(question=question, ground_truth=ground_truth, answer=result)\n",
     "result"
    ]
   },
@@ -242,8 +236,6 @@
     "    flow=flow,\n",
     "    data=data,\n",
     "    column_mapping={\n",
-    "        \"first_name\": \"${data.first_name}\",\n",
-    "        \"last_name\": \"${data.last_name}\",\n",
     "        \"question\": \"${data.question}\",\n",
     "    },\n",
     "    stream=True,\n",
@@ -290,7 +282,7 @@
     "    run=base_run,  # specify base_run as the run you want to evaluate\n",
     "    column_mapping={\n",
     "        \"question\": \"${data.question}\",\n",
-    "        \"answer\": \"${run.outputs.answer}\",\n",
+    "        \"answer\": \"${run.outputs.output}\",  # TODO refine this mapping\n",
     "        \"ground_truth\": \"${data.ground_truth}\",\n",
     "    },\n",
     "    stream=True,\n",
@@ -313,8 +305,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: fix the visualization\n",
-    "# pf.visualize([base_run, eval_run])"
+    "# visualize run using ui\n",
+    "pf.visualize([base_run, eval_run])"
    ]
   },
   {
