--- a/src/promptflow-evals/samples/evaluate-target/evaluate-target.ipynb
+++ b/src/promptflow-evals/samples/evaluate-target/evaluate-target.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "source": [
     "## Target function\n",
-    "We will use a simple `Ask Wiki` application to get answers to questions from wikipedia. We will use `evaluate` API to evaluate `Ask Wiki` applicaton\n",
+    "We will use a simple `Ask Wiki` application to get answers to questions from wikipedia. We will use `evaluate` API to evaluate `Ask Wiki` application\n",
     "\n",
     "`Ask Wiki` needs following environment variables to be set\n",
     "\n",
