add deployment name to the call to write_simple_program

--- a/examples/flex-flows/basic/flex-flow-quickstart.ipynb
+++ b/examples/flex-flows/basic/flex-flow-quickstart.ipynb
@@ -141,7 +141,7 @@
     "# call the flow entry function\n",
     "from programmer import write_simple_program\n",
     "\n",
-    "result = write_simple_program(\"Java Hello, world!\")\n",
+    "result = write_simple_program(\"Java Hello, world!\", deployment_name=deployment_name)\n",
     "result"
    ]
   },
