--- a/examples/flex-flows/eval-criteria-with-langchain/langchain-eval.ipynb
+++ b/examples/flex-flows/eval-criteria-with-langchain/langchain-eval.ipynb
@@ -100,6 +100,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Deployment name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deployment_name = \"gpt-35-turbo\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Test the evaluator with trace"
    ]
   },
@@ -141,6 +157,7 @@
     "    # reference custom connection by name\n",
     "    init={\n",
     "        \"custom_connection\": \"my_llm_connection\",\n",
+    "        \"deployment_name\": deployment_name,\n",
     "    },\n",
     "    data=data,\n",
     "    column_mapping={\n",
