add missing package and fixing the call to evaluator

--- a/examples/flex-flows/eval-criteria-with-langchain/langchain-eval.ipynb
+++ b/examples/flex-flows/eval-criteria-with-langchain/langchain-eval.ipynb
@@ -128,7 +128,7 @@
     "from eval_conciseness import LangChainEvaluator\n",
     "\n",
     "\n",
-    "evaluator = LangChainEvaluator(custom_connection=conn)\n",
+    "evaluator = LangChainEvaluator(custom_connection=conn, deployment_name=deployment_name)\n",
     "result = evaluator(\n",
     "    prediction=\"What's 2+2? That's an elementary question. The answer you're looking for is that two and two is four.\",\n",
     "    input=\"What's 2+2?\",\n",
