use gpt-4o instead of gpt-35-turbo-0125

--- a/examples/flex-flows/basic/flex-flow-quickstart-azure.ipynb
+++ b/examples/flex-flows/basic/flex-flow-quickstart-azure.ipynb
@@ -195,7 +195,7 @@
     "\n",
     "model_config = AzureOpenAIModelConfiguration(\n",
     "    connection=\"open_ai_connection\",\n",
-    "    azure_deployment=\"gpt-35-turbo\",\n",
+    "    azure_deployment=\"gpt-4o\",\n",
     ")"
    ]
   },
