--- a/examples/prompty/basic/prompty-quickstart.ipynb
+++ b/examples/prompty/basic/prompty-quickstart.ipynb
@@ -112,7 +112,7 @@
     "configuration = AzureOpenAIModelConfiguration(\n",
     "    # azure_endpoint=\"${env:AZURE_OPENAI_ENDPOINT}\",  # Use ${env:<ENV_NAME>} to surround the environment variable name.\n",
     "    # api_key=\"${env:AZURE_OPENAI_API_KEY}\",\n",
-    "    azure_deployment=\"gpt-35-turbo-0125\",\n",
+    "    azure_deployment=\"gpt-4o\",\n",
     ")\n",
     "\n",
     "# override configuration with OpenAIModelConfiguration\n",
@@ -177,7 +177,7 @@
    "source": [
     "### Eval the result \n",
     "\n",
-    "Note: the eval flow returns a `json_object`. You need a new model version like [gpt-35-turbo (0125)](https://learn.microsoft.com/en-us/azure/ai-services/openai/concepts/models#gpt-35-models) to use the `json_object` response_format feature."
+    "Note: the eval flow returns a `json_object`."
    ]
   },
   {
