--- a/examples/prompty/chat-basic/chat-with-prompty.ipynb
+++ b/examples/prompty/chat-basic/chat-with-prompty.ipynb
@@ -146,7 +146,7 @@
     "\n",
     "# override configuration with created connection in AzureOpenAIModelConfiguration\n",
     "configuration = AzureOpenAIModelConfiguration(\n",
-    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-35-turbo-0125\"\n",
+    "    connection=\"open_ai_connection\", azure_deployment=\"gpt-4o\"\n",
     ")\n",
     "\n",
     "# override openai connection with OpenAIModelConfiguration\n",
@@ -229,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: the eval flow returns a `json_object`. You need a new model version like [gpt-35-turbo (0125)](https://learn.microsoft.com/en-us/azure/ai-services/openai/concepts/models#gpt-35-models) to use the `json_object` response_format feature."
+    "Note: the eval flow returns a `json_object`."
    ]
   },
   {
@@ -369,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.17"
   },
   "resources": "examples/requirements.txt, examples/prompty/chat-basic, examples/prompty/eval-apology"
  },
