--- a/examples/flex-flows/basic/flex-flow-quickstart.ipynb
+++ b/examples/flex-flows/basic/flex-flow-quickstart.ipynb
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "# control the AOAI deployment (model) used in this example\n",
-    "deployment_name = \"gpt-35-turbo\""
+    "deployment_name = \"gpt-4o\""
    ]
   },
   {
