--- a/examples/tutorials/tracing/custom-otlp-collector/otlp-trace-collector.ipynb
+++ b/examples/tutorials/tracing/custom-otlp-collector/otlp-trace-collector.ipynb
@@ -162,7 +162,7 @@
    "outputs": [],
    "source": [
     "result = my_llm_tool(\n",
-    "    prompt=\"Write a simple Hello, world! program that displays the greeting message when executed.\",\n",
+    "    prompt=\"Write a simple Hello, world! python program that displays the greeting message. Output code only.\",\n",
     "    deployment_name=deployment_name,\n",
     ")\n",
     "result\n",
