--- a/examples/tutorials/get-started/quickstart-azure.ipynb
+++ b/examples/tutorials/get-started/quickstart-azure.ipynb
@@ -174,6 +174,8 @@
     "base_run = pf.run(\n",
     "    flow=flow,\n",
     "    data=data,\n",
+    "    stream=True,\n",
+    "    column_mapping={"url": "${data.url}"},\n",
     ")\n",
     "print(base_run)"
    ]
