add column mapping param for quickstart sample

--- a/examples/tutorials/get-started/quickstart.ipynb
+++ b/examples/tutorials/get-started/quickstart.ipynb
@@ -203,7 +203,14 @@
     "data = \"../../flows/standard/web-classification/data.jsonl\"  # path to the data file\n",
     "\n",
     "# create run with default variant\n",
-    "base_run = pf.run(flow=flow, data=data, stream=True)"
+    "base_run = pf.run(\n",
+    "    flow=flow, \n",
+    "    data=data, \n",
+    "    stream=True,\n",
+    "    column_mapping={\n",
+    "        \"url\": \"${data.url}\",\n",
+    "    },\n",
+    ")"
    ]
   },
   {
@@ -335,6 +342,9 @@
     "    flow=flow,\n",
     "    data=data,\n",
     "    variant=\"${summarize_text_content.variant_1}\",  # here we specify node \"summarize_text_content\" to use variant 1 version.\n",
+    "    column_mapping={\n",
+    "        \"url\": \"${data.url}\",\n",
+    "    },\n",
     "    stream=True,\n",
     ")"
    ]
