--- a/examples/tutorials/get-started/quickstart-azure.ipynb
+++ b/examples/tutorials/get-started/quickstart-azure.ipynb
@@ -174,6 +174,9 @@
     "base_run = pf.run(\n",
     "    flow=flow,\n",
     "    data=data,\n",
+    "    column_mapping={\n",
+    "        \"url\": \"${data.url}\",\n",
+    "    },\n",
     ")\n",
     "print(base_run)"
    ]
@@ -309,6 +312,9 @@
     "variant_run = pf.run(\n",
     "    flow=flow,\n",
     "    data=data,\n",
+    "    column_mapping={\n",
+    "        \"url\": \"${data.url}\",\n",
+    "    },\n",
     "    variant=\"${summarize_text_content.variant_1}\",  # here we specify node \"summarize_text_content\" to use variant 1 version.\n",
     ")"
    ]
