[docs]fix invalid option of `pf flow validate`

--- a/examples/tutorials/run-flow-with-pipeline/pipeline.ipynb
+++ b/examples/tutorials/run-flow-with-pipeline/pipeline.ipynb
@@ -120,7 +120,7 @@
     "\n",
     "> __REMARK:__ To use `load_component` function with flow.dag.yaml, please ensure the following:</br>\n",
     "> - The `$schema` should be defined in target DAG yaml file. For example: `$schema: https://azuremlschemas.azureedge.net/promptflow/latest/Flow.schema.json`.</br>\n",
-    "> - Flow metadata must be generated and kept up-to-date by verifying the file '<my-flow-directory>/.promptflow/flow.tools.json'. If it doesn't exist, run the following command to generate and update it: `pf flow validate --file <my-flow-directory>`."
+    "> - Flow metadata must be generated and kept up-to-date by verifying the file '<my-flow-directory>/.promptflow/flow.tools.json'. If it doesn't exist, run the following command to generate and update it: `pf flow validate --source <my-flow-directory>`."
    ]
   },
   {
