Update pf pipeline tutorial (#3488)
# Description
Update pf component tutorial to highlight the output ports are required
to be set as 'mount' when using multiple node.
Please add an informative description that covers that changes made by
the pull request and link all relevant issues.

# All Promptflow Contribution checklist:
- [ y ] **The pull request does not introduce [breaking changes].**
- [ ] **CHANGELOG is updated for new features, bug fixes or other
significant changes.**
- [ y ] **I have read the [contribution
guidelines](../CONTRIBUTING.md).**
- [ ] **Create an issue and link to the pull request to get dedicated
review from promptflow team. Learn more: [suggested
workflow](../CONTRIBUTING.md#suggested-workflow).**

## General Guidelines and Best Practices
- [ ] Title of the pull request is clear and informative.
- [ ] There are a small number of commits, each of which have an
informative message. This means that previously merged commits do not
appear in the history of the PR. For more information on cleaning up the
commits in your PR, [see this
page](https://github.com/Azure/azure-powershell/blob/master/documentation/development-docs/cleaning-up-commits.md).

### Testing Guidelines
- [ ] Pull request includes test coverage for the included changes.

---------

Co-authored-by: Philip Gao <yigao@microsoft.com>

--- a/examples/tutorials/run-flow-with-pipeline/pipeline.ipynb
+++ b/examples/tutorials/run-flow-with-pipeline/pipeline.ipynb
@@ -147,7 +147,11 @@
     "| debug_info | uri_folder | If you run your flow component in __debug mode__, this port provides debugging information for each run of your lines. E.g. intermediate outputs between steps, or LLM response and token usage. |\n",
     "\n",
     "![prompt flow base component image](./media/cloud/flow-in-pipeline/pf-base-component.png)\n",
-    "    \n",
+    "\n",
+    "> __NOTE:__</br>\n",
+    "> \n",
+    "> `flow_outputs` and `debug_info` outputs are required to be set `mount` mode as the output mode when you run pf component with multiple nodes. \n",
+    "\n",
     " - Auto-generated parameters \n",
     " \n",
     "   These parameters represent all your flow inputs and connections associated with your flow steps. You can set default values in the flow/run definition, and they can be further customized during job submission. Use '[web-classification](https://github.com/microsoft/promptflow/blob/main/examples/flows/standard/web-classification/flow.dag.yaml)' sample flow for example, this flow has only one input named 'url' and 2 LLM steps 'summarize_text_content' and 'classify_with_llm'. The input parameters of this flow component are:\n",
@@ -377,8 +381,12 @@
     "    flow_node.mini_batch_size = 5\n",
     "    flow_node.max_concurrency_per_instance = 2\n",
     "    flow_node.resources = {\"instance_count\": 1}\n",
-    "    flow_node.outputs.flow_outputs.mode = \"rw_mount\"\n",
     "    flow_node.logging_level = \"DEBUG\"\n",
+    "\n",
+    "    # set output mode to 'mount'\n",
+    "    # This is required for the flow component when the 'instance_count' is set higher than 1\n",
+    "    flow_node.outputs.flow_outputs.mode = \"mount\"\n",
+    "    flow_node.outputs.debug_info.mode = \"mount\"\n",
     "\n",
     "    result_parser_node = result_parser_component(\n",
     "        source_data=data_prep_node.outputs.output_data_folder,\n",
